<resources>
    <string name="app_name">SmartFarm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_irrigation_more">Automatic control</string>
    <string name="menu_crop_mng">Period management</string>
    <string name="menu_statistic">Environment statistics</string>
    <string name="menu_process">Process management</string>
    <string name="menu_seek_origin">Product origin</string>
    <string name="menu_material_expense">Materials - expenses</string>
    <string name="menu_diary_work">Working Diary</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_logout">Logout</string>
    <string name="status">Status</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="done">Done</string>
    <string name="start">Start</string>
    <string name="ipStart">Please enter start lue </string>
    <string name="ipEnd">Please enter end value</string>
    <string name="saveSS">Saved successfully</string>
    <string name="saveErr">Failed to save</string>
    <string name="noData">Data not found</string>
    <string name="hight">More than</string>
    <string name="stopWhen">Stop irrigate when</string>
    <string name="lessThan">Less than</string>
    <string name="setTime">Choose time</string>
    <string name="home">Greenhouse</string>
    <string name="irrigationTimer">Irrigation timer</string>
    <string name="humidityBase">Humidity base</string>
    <string name="temperatureBase">Temperature base</string>
    <string name="deactivate">Deactivate</string>
    <string name="activate">Activate</string>
    <string name="noDevice">No devices or failed to load</string>
    <string name="planting">Planting</string>
    <string name="harvested">Harvested</string>
    <string name="harvest">Harvest</string>
    <string name="plantedDate">Planted date: 12/03/2017</string>
    <string name="threeDayHaven">3 days to harvest</string>
    <string name="bed">Bed</string>
    <string name="ipStartEndErr">End value must be larger than Start value</string>
    <string name="temp">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="good">Good</string>
    <string name="process">Process</string>
    <string name="plantType">Plant type</string>
    <string name="typePlanting">Type of planting</string>
    <string name="typeCultivation">Type of cultivation</string>
    <string name="growthTime">Growth time</string>
    <string name="reuseAfter">Reuse after</string>
    <string name="soilStanđard">Soil stanđard</string>
    <string name="timePreparingSoil">Time for preparing soil</string>
    <string name="smoothness">Smoothness</string>
    <string name="softness">Softness</string>
    <string name="thickness">Thickness</string>
    <string name="waterRetention">Water retention</string>
    <string name="microorganism">Microorganism</string>
    <string name="soilpH">Soil pH</string>
    <string name="gasExchange">Gas exchange</string>
    <string name="irrigation">Irrigation</string>
    <string name="time">Time</string>
    <string name="fertilizer">Fertilizer</string>
    <string name="typeHarvest">Type of harvest</string>
    <string name="packaging">Packaging</string>
    <string name="preservation">Preservation</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="send">Send</string>
    <string name="input">Input</string>
    <string name="output">Output</string>
    <string name="materials">Material</string>
    <string name="next">Next</string>
    <string name="farm">Farm</string>
    <string name="company">Company</string>
    <string name="crop">Period</string>
    <string name="hello">Hello</string>
    <string name="dailyGrowthReport">Daily growth</string>
    <string name="lang">Language:</string>
    <string name="msgChangeLanguage">Change language successfully !</string>
    <string name="receiveMaterial">Receive material</string>
    <string name="materialTypes">Material types</string>
    <string name="provider">Provider</string>
    <string name="quantity">Quantity</string>
    <string name="totalAmount">Total amount</string>
    <string name="receivedDate">Received date</string>
    <string name="issueDate">Issue date</string>
    <string name="issueMaterial">Issue material</string>
    <string name="lostInternet">Internet connection interrupted</string>
    <string name="lostSystem">System connection interrupted</string>
    <string name="watering">Watering</string>
    <string name="irrigateNow">Irrigate now</string>
    <string name="controlErr">Failed to control device</string>
    <string name="basicInformation">Basic information</string>
    <string name="work">Works</string>
    <string name="finishedTime">Finished time</string>
    <string name="result">Result</string>
    <string name="setStartDate">Start date</string>
    <string name="setProcess">Process</string>
    <string name="setBed">Bed</string>
    <string name="processID">Process ID</string>
    <string name="harvestedDate">Harvested date</string>
    <string name="packagedDate">Packaged date</string>
    <string name="expiryDate">Expiry date</string>
    <string name="qrCode">QR Code</string>
    <string name="summary">Summary</string>
    <string name="expectedHarvestDate">Expected harvest date</string>
    <string name="willDisplayedAfterHarvest">Will be displayed after harvest</string>
    <string name="processName">Process Name</string>
    <string name="irrigationProcess">Irrigation Process</string>
    <string name="automaticIrrigation">Automatic irrigation</string>
    <string name="wateredTimes">Watered times</string>
    <string name="duration">Duration</string>
    <string name="packageText">Package</string>
    <string name="stamp">Stamp</string>
    <string name="selfIrrigate">Manual Control</string>
    <string name="alarm">Alarm</string>
    <string name="lastIrrigation">Last irrigation:</string>
    <string name="dripIrritation">Drip irrigation</string>
    <string name="sprayIrritation">Spray irritation</string>
    <string name="lostLight">Too dark</string>
    <string name="openGate">Open the shelter</string>
    <string name="openFan">Open the humidifier</string>
    <string name="lightGood">Optimized brightness</string>
    <string name="lostMoise">Low moisture</string>
    <string name="goodMoise">Optimized humidity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="inputUsername">Please fill in your Username</string>
    <string name="inputTextPass">Please fill in your password</string>
    <string name="loginParamNotFound">Invalid account or password</string>
    <string name="noCamera">No Camera</string>
    <string name="lostPassword">Forgot password</string>
    <string name="lostPasswordNote">Please call customer service to retrieve your password</string>
    <string name="account">Account</string>
    <string name="accountName">Account name</string>
    <string name="address">Address</string>
    <string name="editAccount">Edit account</string>
    <string name="btnChangePass">Change password</string>
    <string name="oldPass">Old password</string>
    <string name="rePass">Repeat</string>
    <string name="oldPassErr">Old password is not correct</string>
    <string name="rePassNotTrue">Repeat password is not correct</string>
    <string name="selectFarm">Select Farm</string>
    <string name="selectGreenHouse">Select GreenHouse</string>
    <string name="loadDataErr">Load data error</string>
    <string name="pleaseSelectFarm">Please select Farm</string>
    <string name="pleaseSelectGreenHouse">Please select GreenHouse</string>
    <string name="cropDetail">Period details</string>
    <string name="name">Name</string>
    <string name="code">Code</string>
    <string name="endDate">End date</string>
    <string name="endTimeReality">Actual end date</string>
    <string name="startTimeReality">Actual start date </string>
    <string name="filter">Sort</string>
    <string name="category">Category</string>
    <string name="product">Product</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="note">Note</string>
    <string name="startAs">Start after</string>
    <string name="endAs">End after</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="doIt">Process in</string>
    <string name="scanCode">Please scan or insert code</string>
    <string name="weigh">Weight</string>
    <string name="datePlant">Planted date</string>
    <string name="description">Description</string>
    <string name="warehouseName">Warehouse Name</string>
    <string name="state">State</string>
    <string name="inputData">Đã nhập kho</string>
    <string name="noInputData">Chưa nhập kho</string>
    <string name="describe">Describe</string>
    <string name="userImport">User</string>
    <string name="total">Total</string>
    <string name="importDate">Import Date</string>
    <string name="exportDate">Export Date</string>
    <string name="receiverName">Receiver Name</string>
    <string name="receiverAddress">Receiver Address</string>
    <string name="price">Price</string>
    <string name="unit">Unit</string>
    <string name="detail">Details</string>
    <string name="device">Device</string>
    <string name="condition">Condition</string>
    <string name="priority">Priority</string>
    <string name="and">And</string>
    <string name="or">Or</string>
    <string name="expression">Expressions</string>
    <string name="criteria">Criteria</string>
    <string name="sensor">Sensor</string>
    <string name="airTemperature">Air Temperature</string>
    <string name="airMoisture">Air Moisture</string>
    <string name="soilTemperature">Soil Temperature</string>
    <string name="soilMoisture">Soil Moisture</string>
    <string name="complete">Complete</string>
    <string name="processing">Processing</string>
    <string name="incomplete">Incomplete</string>
    <string name="date">Date</string>
    <string name="over">Over</string>
    <string name="nutrientTank">Nutrition Tank</string>
    <string name="timeOfRunAgain">Time to change pump (min)</string>
    <string name="stopWhenTemperature">Stop when temperature > (°C)</string>
    <string name="ECBellow">EC lower limit</string>
    <string name="ECAbove">EC upper limit</string>
    <string name="progress">Progress</string>
    <string name="area">Area</string>
    <string name="staffDo">Staff</string>
    <string name="staffReviewer">Supervisor</string>
    <string name="timePumpA">Pump A working time (min)</string>
    <string name="timePumpB">PumpB working time (min)</string>
    <string name="checkBeforePump">Check before pump (min)</string>
    <string name="timeStartPump">Time start pump</string>
    <string name="numberMinuteRunPump">Number of minute run pump</string>
    <string name="numberMinuteStopPump">Number of minute stop pump</string>
    <string name="overView">Overview</string>
    <string name="coolingSystem">Cooling System</string>
    <string name="foodWater">Food / Water</string>
    <string name="collectEggsRemoveFeces">Collect Eggs/ Clear Feces</string>
    <string name="system">System</string>
    <string name="calendarAuto">Calendar Auto</string>
    <string name="automan">Auto control</string>
</resources>